<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.spkpm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.spkpm.ui.kriteria.KriteriaFragment"
        android:label="@string/menu_kriteria"
        tools:layout="@layout/fragment_kriteria" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.spkpm.ui.subkriteria.SubKriteriaFragment"
        android:label="@string/menu_subkriteria"
        tools:layout="@layout/fragment_subkriteria" />
</navigation>